# Connect4-AI

./: .gitignore  CMakeLists.txt  README.md
include/: AI.h  Game.h  MinimaxAI.h
src/: Game.cpp  MinimaxAI.cpp  main.cpp
